# cell-nuclei-segmentation

./: LICENSE  README.md  dataloader_playground.py  model_playground.py  pyproject.toml
cell_nuclei_segmentation/: .gitignore  Dockerfile  config.yaml  docker-compose.yaml  requirements.txt  setup.py  train.py
cell_nuclei_segmentation/dataloader/: dataloader.py  dataloader_test.py
cell_nuclei_segmentation/dataset/: cc0.html  image_description.csv  readme.txt
cell_nuclei_segmentation/dataset/groundtruth/: Ganglioneuroblastoma_0.tif  Ganglioneuroblastoma_1.tif  Ganglioneuroblastoma_10.tif  Ganglioneuroblastoma_2.tif  Ganglioneuroblastoma_3.tif  Ganglioneuroblastoma_4.tif  Ganglioneuroblastoma_6.tif  Ganglioneuroblastoma_7.tif  Ganglioneuroblastoma_8.tif  Ganglioneuroblastoma_9.tif  Neuroblastoma_0.tif  Neuroblastoma_1.tif  Neuroblastoma_10.tif  Neuroblastoma_12.tif  Neuroblastoma_13.tif  Neuroblastoma_14.tif  Neuroblastoma_15.tif  Neuroblastoma_16.tif  Neuroblastoma_17.tif  Neuroblastoma_2.tif  Neuroblastoma_3.tif  Neuroblastoma_4.tif  Neuroblastoma_5.tif  Neuroblastoma_6.tif  Neuroblastoma_8.tif  Neuroblastoma_9.tif  normal_0.tif  normal_1.tif  normal_10.tif  normal_11.tif  normal_12.tif  normal_13.tif  normal_14.tif  normal_15.tif  normal_16.tif  normal_17.tif  normal_18.tif  normal_19.tif  normal_2.tif  normal_20.tif  (+35 more)
cell_nuclei_segmentation/models/: maskrcnn.py
cell_nuclei_segmentation/notebooks/: MaskRCNN demo.ipynb  MaskRCNN.ipynb  Visualize data.ipynb
cell_nuclei_segmentation/trainers/: trainer.py  utils.py
(+73 files in other folders)
