[tool.poetry]
name = "cell-nuclei-segmentation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cell_nuclei_segmentation"}]

[tool.poetry.dependencies]
python = "^3.10"
segmentation-models-pytorch = "^0.3.3"
torch = "^2.0.1"
numpy = "^1.24.3"
pytorch-lightning = "^2.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
